--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,4 @@
 platform = atmelavr
 board = pro16MHzatmega328
 framework = arduino
-board_build.f_cpu = 1000000L ;reality is 125kHz, but libraries wont compile properly < 1MHz :(
+board_build.f_cpu = 1000000L
